# eshop_backend

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml  setup.py
migrations/2024-06-19-154933_create_tables/: down.sql  up.sql
migrations/2024-06-20-092447_removing/: up.sql
migrations/2024-06-20-104922_renaming/: up.sql
migrations/2024-06-22-131419_add secret key/: up.sql
migrations/2024-06-22-160257_set telegram_id unique/: down.sql  up.sql
migrations/2024-06-23-053504_add users activation/: down.sql  up.sql
migrations/2024-06-23-061450_adding secres/: down.sql  up.sql
migrations/2024-06-23-073200_extending orders/: up.sql
migrations/2024-06-23-074925_changing type/: up.sql
migrations/2024-06-23-075119_renaming price in default orders/: up.sql
migrations/2024-06-23-080235_swapping names to texts /: up.sql
migrations/2024-06-23-083115_add default value for ordered_at column/: up.sql
src/: main.rs  models.rs  schema.rs
src/controllers/: mod.rs  users_controller.rs
src/types/: orders.rs  products.rs
