[package]
name = "eshop"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
actix = "0.13.5"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono", "serde_json"] }
dotenvy = "0.15.7"
serde_json = "1.0.117"
chrono = {version = "0.4.38", features = ["serde"]}
redis = "0.25.4"
serde = {version = "1.0.203", features = ["derive"]}
